--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -14,6 +14,7 @@
 		    <option value=1116>3 Years</option>
 		</select>
 		<a href="{{diary_create}}" class="btn btn-success" id="create-diary-btn">create diary</a>
+		<button onclick="createTable(this)">create table</button>
 		<div id="table-div">
 		</div>
 	</div>
