--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -46,7 +46,7 @@
 			displayContent(diary_data[selected_index]);
 
 			// display detail
-			displayDetails();
+			displayDetail();
 		}
 
 		const displayList = () => {
