--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -119,5 +119,7 @@
 
 		const listDiv = document.getElementById("list");
 		const detailDiv = document.getElementById("detail");
+
+		displayList();
 	</script>
 {% endblock %}
