--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -3,6 +3,7 @@
 	Diary | List
 {% endblock %}
 {% block content %}
+<div>
 	<h3>Hard Wood Laminate</h3>
 	<div id="list">
 		<label for="interval">Interval:</label>
@@ -25,6 +26,7 @@
 		<div id="content-div">
 		</div>
 	</div>
+</div>
 
 	<script>
 		let diary_data = [];
@@ -61,10 +63,6 @@
 
 			// hide list
 			listDiv.style.display = "none";
-		}
-
-		const setElementsDisplay = (elements, display_type) => {
-			elements.forEach((element) => element.style.display = display_type)
 		}
 
 		const displayContent = (content) => {
@@ -105,21 +103,22 @@
 			tableDiv.appendChild(table);
 		}
 
-		const controlDiv = document.getElementById("control-div");
+		// initialize the list
+		const initialize = async () => {
+			let data = await get_data();
+			displayList();
+		}
+
 		// diary list conponent
+		const listDiv = document.getElementById("list");
 		const tableDiv = document.getElementById("table-div");
 		const createDiaryBtn = document.getElementById("create-diary-btn");
 		const intervalDiv = document.getElementById("interval-div");
 
-		const diaryListComponents = [tableDiv, createDiaryBtn, intervalDiv];
 
-
+		// detail
+		const detailDiv = document.getElementById("detail");
 		const contentDiv = document.getElementById("content-div");
 		const showTableBtn = document.getElementById("show-table-btn");
-
-		const listDiv = document.getElementById("list");
-		const detailDiv = document.getElementById("detail");
-
-		displayList();
 	</script>
 {% endblock %}
