--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -120,5 +120,7 @@
 		const detailDiv = document.getElementById("detail");
 		const contentDiv = document.getElementById("content-div");
 		const showTableBtn = document.getElementById("show-table-btn");
+
+		initialize();
 	</script>
 {% endblock %}
