--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -112,6 +112,7 @@
 		// initialize the list
 		const initialize = async () => {
 			let data = await get_data();
+			createTable();
 			displayList();
 		}
 
