--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -7,7 +7,7 @@
 	<h3>Hard Wood Laminate</h3>
 	<div id="list">
 		<label for="interval">Interval:</label>
-		<select id="interval" onchange="update_table(this)">
+		<select id="interval" onchange="updateTable(this)">
 		    <option value=93>3 Months</option>
 		    <option value=186>6 Month</option>
 		    <option value=365>1 Year</option>
