--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -8,6 +8,7 @@
 	<div id="list">
 		<label for="interval">Interval:</label>
 		<select id="interval" onchange="updateTable(this)">
+			<option value=7>1 Week</option>
 		    <option value=93>3 Months</option>
 		    <option value=186>6 Month</option>
 		    <option value=365>1 Year</option>
