--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -150,6 +150,8 @@
 			let data = await get_data();
 			createTable();
 			displayList();
+			// hide create 
+			createDiv.style.display = 'none';
 		}
 
 		// create
