--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -87,7 +87,7 @@
 			detailDiv.style.display = "none";
 
 			// hide create
-			createDiv.style.display = "none";
+			createUpdateDiv.style.display = "none";
 		}
 			
 		const displayDetail = () => {
