--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -19,7 +19,7 @@
 		    <option value=1116>3 Years</option>
 		</select>
 		<!-- <a href="{{diary_create}}" class="btn btn-success" id="create-diary-btn">create diary</a> -->
-		<button onclick="displayCreate(this)" class="btn btn-success">new entry</button>
+		<button onclick="displayUpdateCreate(this)" class="btn btn-success">new entry</button>
 		<div id="table-div">
 		</div>
 	</div>
