--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -54,7 +54,7 @@
 		let selected_index = null;
 
 		let post_domain = '{{domain}}';
-		let update_domain = 'diary/diary_detail_api/';
+		let update_domain = 'diary_detail_api/';
 
 
 		// initialize tiny mce
