--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -99,6 +99,9 @@
 
 			// hide create
 			createUpdateDiv.style.display = "none";
+
+			// hide delete
+			deleteDiv.style.display = 'none';
 		}
 			
 		const displayDetail = () => {
