--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -241,6 +241,10 @@
 
 			// display the list
 			listDiv.style.display = "block";
+
+			// clear the contents of the title and textbox
+			diaryTitle.value = '';
+			tinymce.get("mytextarea").setContent('');
 		}
 
 		const update = async () => {
@@ -258,7 +262,11 @@
 			createUpdateDiv.style.display = 'none';
 
 			// display the list
-			listDiv.style.display = "block";			
+			listDiv.style.display = "block";	
+
+			// clear the contents of the title and textbox
+			diaryTitle.value = '';
+			tinymce.get("mytextarea").setContent('');		
 		}
 
 		// delete
