--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -53,6 +53,8 @@
 		<button onclick="displayList(this)">no</button>
 	</div>
 </div>
+{% load static %}
+<script type="text/javascript" src='{% static "js/custom.js" %}'></script>
 
 	<script>
 		let diary_data = [];
