--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -56,7 +56,7 @@
 {% load static %}
 <script type="text/javascript" src='{% static "js/custom.js" %}'></script>
 
-	<script>
+	<script defer='defer'>
 		let diary_data = [];
 		let filteredData = [];
 		let selected_index = null;
