--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -167,7 +167,7 @@
 		}
 
 		// create a table base on fund and category
-		const createTableWr = () => createTable(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index);
+		const createTableWr = () => {createTable(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index)}
 
 		// initialize the list
 		const initialize = async () => {
