--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -166,7 +166,9 @@
 		}
 
 		// create a table base on fund and category
-		const createTableWr = () => {createT(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index)}
+		const createTableWr = () => {
+			console.log(months);
+		}
 
 		// initialize the list
 		const initialize = async () => {
