--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -54,6 +54,6 @@
 		<button onclick="displayList(this)">no</button>
 	</div>
 </div>
-<script type="text/javascript" src='{% static "js/custom.js" %}' defer='defer'></script>
-<script type="text/javascript" src="{% static 'js/diary.js' %}" defer='defer'></script>
+<script type="text/javascript" src='{% static "js/custom.js" %}'></script>
+<script type="text/javascript" src="{% static 'js/diary.js' %}"></script>
 {% endblock %}
