--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -55,5 +55,5 @@
 	</div>
 </div>
 <script type="text/javascript" src='{% static "js/custom.js" %}'></script>
-<script type="text/javascript" src="{% static 'js/diary.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/diary.js' %}" defer='defer'></script>
 {% endblock %}
