--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -166,6 +166,8 @@
 		// get the data
 		const data = await get_data_wr();
 		createTableWr();
+
+		displayList();
 	}
 
 	// create a table base on fund and category
