--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -171,7 +171,7 @@
 	}
 
 	// create a table base on fund and category
-	const createTableWr = () => createT(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index);
+	const createTableWr = () => createTable(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index);
 
 
 	// create
